--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
- PlatformIO Project Configuration File
+; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -12,4 +12,5 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-lib_extra_dirs = ~/Documents/Arduino/libraries
+monitor_speed = 115200
+lib_deps = adafruit/Adafruit IO Arduino@^4.2.0
