--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,5 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
-lib_deps = adafruit/Adafruit IO Arduino@^4.2.0
+lib_deps = 
+	adafruit/Adafruit IO Arduino@^4.2.0
